src/main/java/com/example/keepstock/error/exception/AccessDeniedException.java
package com.example.keepstock.error.exception;

public class AccessDeniedException extends RuntimeException {
    public AccessDeniedException(String message) {
        super(message);
    }
}